--- a/app/views/users/new.slim
+++ b/app/views/users/new.slim
@@ -13,7 +13,15 @@ div id='marketing'
       = f.input :password
 
       h4 class='mt-3' Situation
-      = f.input :situation
+      .form-check
+        = f.input :situation,
+          label: false,
+          collection: [[:moved_in, 'I moved in'],
+                       [:new_construction, 'I built a new flat/house'],
+                       [:temporary_access, 'I need a temporary access']],
+          label_method: :last,
+          value_method: :first,
+          prompt: 'Select your situation'
 
       h4 class='mt-3' Technical Informations
       = f.input :pdl
