Allow user to edit basic details

--- a/app/views/users/technical_details.html.slim
+++ b/app/views/users/technical_details.html.slim
@@ -16,3 +16,5 @@ div id='marketing'
       = f.input :pdl
 
       = f.button :submit, 'Complete your profile', class: 'btn btn-outline-success btn-lg'
+
+    = link_to 'Previous', edit_user_path
